# muxer

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/muxer/: cli.py  config.py
src/muxer/adapters/: git.py  tmux.py
src/muxer/tui/: app.py
tests/: conftest.py  test_app.py  test_config.py  test_git.py  test_tmux.py
